--- a/style.css
+++ b/style.css
@@ -118,9 +118,9 @@ button{
     border: currentColor 3px solid;
     padding: 10px;
     font-size: 1.5em;
+    margin-bottom: 20px;
 
 }
-
 .hidden{
     display: none;
 }
