--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ h1{
     border-bottom:0.1em solid indigo ;
 }
 
+/* Score Styling */
+
+.table{
+  border: 2px solid red;
+  padding: 1em;
+  margin-bottom:5px;
+  font-size:1.5em;
+}
 
 /* Strike Styling */
 
@@ -99,16 +107,16 @@ h1{
 /* Game Over Screen Styling */
 
 #game-over-area{
-    text-align: center;
+    text-align:center;
     border:5px dashed indigo;
-    padding:50px;
-    width: 40%;
-    margin-top:40px;
+    padding:20px;
+    width:17%;
+    margin-top:20px;
 }
 
 h2{
     color: currentColor;
-    font-size: 3em;
+    font-size: 2em;
     margin-top:0px;
 }
 
@@ -121,6 +129,7 @@ button{
     margin-bottom: 20px;
 
 }
+
 .hidden{
     display: none;
 }
@@ -138,3 +147,11 @@ button{
     content:"O";
     opacity: 0.4;
 }
+
+
+  @media screen and (max-width:617px) {
+    #game-over-area{
+      width:50%;
+      
+    }
+  } 
